    - Fixed loads and shunts at isolated buses are no longer included
      in system and area summaries in printpf(). Line charging
      injections set to zero for DC power flow results.
    - Added tests for printpf() in t_printpf.m.
    - Changes to the internally indexed version of gencost now
      get properly copied back to externally indexed version by
      int2ext().

11/11/14
    - Added get_losses() function to compute losses, line charging
      reactive injections and their derivatives, as functions of
      bus voltages. Corresponding tests included in t_get_losses(),
      including example of loss sensitivity factors.
    - Fixed bug in runpf.m that caused a crash for cases with
      pf.enforce_q_lims turned on and exactly two Q limit violations,
      one Qmax and one Qmin. Thanks to Jose Luis Marin.

11/4/14
    - Modified behavior so setting out.all option to 0 is now ignored
      for pretty-printed output to files specified as FNAME argument
      to runpf(), runopf(), etc.

10/22/14
    - Removed idx_area() and all code references to 'areas' field
      in MATPOWER cases except those needed to support reading
      v1 case files and those required for backward compatibility of
      APIs. Removed unused (and formerly deprecated) 'areas' field from
      version 2 case files that still included it.

10/21/14
    - Fixed a bug in savecase() where a gencost matrix with extra
      columns of zeros resulted in a corrupted MATPOWER case file.
    - Modified total_load() to return actual rather than nominal
      value for dispatchable loads by default, unless using the
      old-style string input for the 4th input arg. See
      'help total_load' for details.

10/16/14
    - Reactive power output of multiple generators at a PQ bus
      no longer get re-allocated when running a power flow.

10/11/14
    - Added 'fmincon_ip', 'linprog_ds' and 'optimoptions' to
      have_fcn() to test for availability of fmincon's interior